feat: implement Affaire metrics calculation service and associated data repositories